--- a/assets/app.css
+++ b/assets/app.css
@@ -42,8 +42,77 @@ a {
 }
 
 /* ------------------------- */
+img {
+  max-width: 100%;
+  max-height: 100%;
+}
+
 .global-footer {
   clear: both;
+}
+
+/* Modals */
+body.overlay {
+  overflow: hidden;
+}
+
+body.overlay .modal-overlay {
+  display: block;
+}
+
+.modal-overlay {
+  display: none;
+
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+
+  background: rgba(0, 0, 0, 0.4);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+
+.modal {
+  position: absolute;
+  top: 120px;
+  left: 50%;
+  transform: translateX(-50%);
+
+  padding: 20px;
+  border-radius: 5px;
+
+  background: #fff;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+
+.modal .close {
+  position: absolute;
+  top: -0.7em;
+  right: -0.7em;
+
+  width: 1em;
+  height: 1em;
+  padding: 0.1em;
+
+  border: 2px solid #fff;
+  border-radius: 1em;
+
+  background: #b1b1b1;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
+
+  text-align: center;
+  font-size: 1.2em;
+  line-height: 0.8;
+  font-weight: bold;
+  color: #fff;
+
+  cursor: pointer;
+}
+
+.modal .dog-picture {
+  max-width: 500px;
+  max-height: 500px;
 }
 
 /* Tiles */
@@ -71,8 +140,4 @@ a {
 
 .tile.template {
   display: none;
-}
-
-.tile .dog-picture {
-  max-width: 100%;
 }
